- fixed column misalignment

--- a/static/css/pin.css
+++ b/static/css/pin.css
@@ -13,6 +13,10 @@ body {
     margin-left: 20px;
 }
 
+h2{
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
 #wrapper {
 	width: 90%;
 	max-width: 1100px;
